--- a/webpage/music.html
+++ b/webpage/music.html
@@ -11,18 +11,20 @@
 
 			<h1>190M Music Playlist Viewer</h1>
 			<h2>Search Through Your Playlists and Music</h2>
-		</div>
-
+	</div>
+<!--		<?php foreach (scandir($dir) as $filename){?>-->
+<!--		<li><a href=""><?= $filename ?></a></li>-->
+<!--		<?php }?>-->
 
 		<div id="listarea">
 			<ul id="musiclist">
 				<li class="mp3item">
-					<a href="songs/Be More.mp3">Be More.mp3</a>
+					<a href="Be%20More.mp3">Be More.mp3</a>
 					(5438375 b)
 				</li>
 
 				<li class="mp3item">
-					<a href="songs/Drift Away.mp3">Drift Away.mp3</a>
+					<a href="Drift%20Away.mp3">Drift Away.mp3</a>
 					(5724612 b)
 				</li>
 
@@ -33,7 +35,7 @@
 				</li>
 
 				<li class="mp3item">
-					<a href="songs/Panda Sneeze.mp3">Panda Sneeze.mp3</a>
+					<a href="Panda%20Sneeze.mp3">Panda Sneeze.mp3</a>
 					(58 b)
 				</li>
 
